objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>AVA_BLNG__Invoice_Message__c</fullName>
        <label>Invoice Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Base_SSP__c</fullName>
        <label>Standalone Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Carve_In__c</fullName>
        <formula>IF ( (blng__BillableUnitPrice__c * Quantity) &lt; blng__AllocatedRevenueAmount__c, blng__AllocatedRevenueAmount__c - (blng__BillableUnitPrice__c * Quantity), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carve-In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Carve_Out__c</fullName>
        <formula>IF ( (blng__BillableUnitPrice__c * Quantity  ) &gt; blng__AllocatedRevenueAmount__c, (blng__BillableUnitPrice__c * Quantity) - blng__AllocatedRevenueAmount__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carve-Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERP_Reference_ID__c</fullName>
        <formula>IF (ISBLANK(Order.ERP_Reference_ID__c),&quot;&quot;,Order.ERP_Reference_ID__c+ RIGHT(OrderItemNumber,4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Reference ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Period__c</fullName>
        <formula>&quot;FY&quot; + RIGHT(TEXT(YEAR(ServiceDate)),2) + IF(MONTH(ServiceDate)&lt;=3, &quot;Q1&quot;, IF(MONTH(ServiceDate)&lt;=6, &quot;Q2&quot;, IF(MONTH(ServiceDate)&lt;=9, &quot;Q3&quot;, &quot;Q4&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasConsumptionSchedule__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__Product__r.SBQQ__HasConsumptionSchedule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Consumption Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <formula>TEXT(Order.SBQQ__Quote__r.SBQQ__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Metric_Twin__c</fullName>
        <label>Revenue Metric</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order product is activated.</description>
        <inlineHelpText>Indicates if the order product is activated.</inlineHelpText>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset created from this order product</description>
        <inlineHelpText>Asset created from this order product</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets
            you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The block price that is applied to this order product at order creation time.</description>
        <inlineHelpText>The block price that is applied to this order product at order creation time.</inlineHelpText>
        <label>Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__BookingsIndicator__c</fullName>
        <description>Indicates whether bookings are included.</description>
        <inlineHelpText>Indicates whether bookings are included.</inlineHelpText>
        <label>Bookings Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BookingsIndicator</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BundleRoot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The root bundle parent Order Product of components. This component will be deleted if its bundle root is deleted.</description>
        <inlineHelpText>An internally used field that points to the root of its bundle parent.</inlineHelpText>
        <label>Bundle Root</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products (Bundle Root)</relationshipLabel>
        <relationshipName>BundleChildren</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.</description>
        <inlineHelpText>The type of the product charge.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractAction__c</fullName>
        <description>The contract action where this order product is resulted from.</description>
        <inlineHelpText>The contract action where this order product is resulted from.</inlineHelpText>
        <label>Contract Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ContractAction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contract of the subscription that is created from this order product.</description>
        <inlineHelpText>The contract of the subscription that is created from this order product.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order product is contracted.</description>
        <inlineHelpText>Indicates if the order product is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>Controls the contracting behavior of an Order Product. &quot;Inherit&quot; uses the behavior of the parent Order. &quot;Contract Separately&quot; generates a separate Contract for
            the Order Product. &quot;No Contract&quot; skips the Order Product altogether during the contracting process.</description>
        <inlineHelpText>Controls the contracting behavior of an Order Product.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Contract Separately</fullName>
                </value>
                <value>
                    <fullName>Do Not Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultSubscriptionTerm__c</fullName>
        <description>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first
            generated.</description>
        <inlineHelpText>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first generated.</inlineHelpText>
        <label>Default Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DimensionType__c</fullName>
        <description>For multi-segmented Products, this is the type of price dimeension (e.g. &quot;YEAR&quot;, &quot;MONTH&quot;, &quot;QUARTER&quot;) of the order item.</description>
        <inlineHelpText>For multi-segmented Products, this is the type of price dimeension (e.g. &quot;YEAR&quot;, &quot;MONTH&quot;, &quot;QUARTER&quot;) of the order item.</inlineHelpText>
        <label>Segment Type</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule applied to this order product.</description>
        <inlineHelpText>Discount schedule applied to this order product.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderProductBookings__c</fullName>
        <description>Amount of the order product’s total price.</description>
        <formula>IF( ISPICKVAL(SBQQ__BookingsIndicator__c  , &apos;Include&apos;) , UnitPrice * Quantity , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of the order product’s total price.</inlineHelpText>
        <label>Order Product Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderedQuantity__c</fullName>
        <description>The actual quantity of the product placed in the order.</description>
        <inlineHelpText>The actual quantity of the product placed in the order.</inlineHelpText>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceDimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the price dimension applied to this order product.</description>
        <inlineHelpText>References the price dimension applied to this order product.</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price schedule applied to this order product.</description>
        <inlineHelpText>Price schedule applied to this order product.</inlineHelpText>
        <label>Price Schedule</label>
        <referenceTo>SBQQ__PriceSchedule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <description>Determines how the price for this line item is set. &quot;List&quot; = calculated by subtracting discount from list price. &quot;Cost&quot;  = calculated by adding markup to cost.</description>
        <inlineHelpText>Indicates how the price for this line item is calculated. &quot;List&quot; = subtracting discount from list price. &quot;Cost&quot; = adding markup to cost.</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSubscriptionType__c</fullName>
        <description>Set the order item&apos;s product subscription type.</description>
        <inlineHelpText>Set the order item&apos;s product subscription type.</inlineHelpText>
        <label>Product Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProrateMultiplier__c</fullName>
        <description>Calculated ratio used to compute Prorated Price.</description>
        <inlineHelpText>Calculated ratio used to compute Prorated Price.</inlineHelpText>
        <label>Prorate Multiplier</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote line where this order product is created from.</description>
        <inlineHelpText>The quote line where this order product is created from.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotedListPrice__c</fullName>
        <description>List unit price for the product quoted by this line item. List Price originates from the price book.</description>
        <inlineHelpText>List unit price for the product quoted by this line item. List Price originates from the price book.</inlineHelpText>
        <label>Quoted List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotedQuantity__c</fullName>
        <description>The quoted quantity.</description>
        <inlineHelpText>The quoted quantity.</inlineHelpText>
        <label>Quoted Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required By</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RevisedOrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the order product that this order product revises.</description>
        <inlineHelpText>References the order product that this order product revises.</inlineHelpText>
        <label>Revised Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products (Revised Order Product)</relationshipLabel>
        <relationshipName>RevisingOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentIndex__c</fullName>
        <description>For multi-segmented products, Index representing this order product&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented products, Index representing this order product&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <description>For multi-segmented Products, this is a shared key used to group multi-dimensional Quote Lines together.</description>
        <inlineHelpText>For multi-segmented Products, this is a shared key used to group multi-dimensional Quote Lines together.</inlineHelpText>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>ShippingAccountOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Status__c</fullName>
        <description>The current state of the order product.</description>
        <inlineHelpText>Indicates the current state of the order product. It is defaulted to Draft when an order is created.</inlineHelpText>
        <label>Activation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__OrderProductStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Method of calculating the subscription price. A blank value indicates that the line item isn&apos;t a subscription product.</description>
        <inlineHelpText>Indicates how the subscription price is calculated. If this is blank, the line items is not a subscription product.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionPricing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <label>Subscription Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ProductSubscriptionType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription created from this order product</description>
        <inlineHelpText>Subscription created from this order product</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>SubscriptionOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>Estimated tax amount</description>
        <inlineHelpText>Tax amount</inlineHelpText>
        <label>Estimated Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxCode__c</fullName>
        <description>Specifies the tax code for taxation rules.</description>
        <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
        <label>Tax code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Term Discount Schedule applied to this order product.</description>
        <inlineHelpText>Term Discount Schedule applied to this order product.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Order Products (Term Discount Schedule)</relationshipLabel>
        <relationshipName>TermedOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TerminatedDate__c</fullName>
        <description>Date that this order product&apos;s related subscription was terminated</description>
        <inlineHelpText>Date that this order product&apos;s related subscription was terminated</inlineHelpText>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnproratedNetPrice__c</fullName>
        <description>The full-term Net Unit Price.</description>
        <inlineHelpText>The full term net price for individual line.</inlineHelpText>
        <label>Full-Term Net Unit Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription being upgraded by this quote line.</description>
        <inlineHelpText>Subscription being upgraded by this quote line. When the quote is contracted this subscription will have its Terminated Date field populated.</inlineHelpText>
        <label>Upgraded Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Upgraded Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSP_Allocation_Amount__c</fullName>
        <formula>if (Order.Total_Standalone_Selling_Price__c &gt; 0, Order.TotalAmount * (  Standalone_Selling_Total_Price__c  /  Order.Total_Standalone_Selling_Price__c  ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSP Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSP_Allocation_Ratio__c</fullName>
        <formula>if( Order.Total_Standalone_Selling_Price__c &gt; 0, Standalone_Selling_Total_Price__c /  Order.Total_Standalone_Selling_Price__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSP Allocation Ratio</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standalone_Selling_Total_Price__c</fullName>
        <label>Standalone Selling Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Order_Amount__c</fullName>
        <formula>Order.TotalAmount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Order_Standalone_Selling_Price__c</fullName>
        <formula>Order.Total_Standalone_Selling_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Order Standalone Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__AllocatedRevenueAmount__c</fullName>
        <label>Revenue Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent asset for the order product, used with the CALM service</description>
        <label>Asset (CALM)</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>AssetOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillThroughDateOverride__c</fullName>
        <label>Bill Through Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BillableUnitPrice__c</fullName>
        <label>Billable Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BilledAmountwithouttax__c</fullName>
        <inlineHelpText>The sum of all invoices for this order product (excluding tax).</inlineHelpText>
        <label>Billed Amount (without tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BilledTax__c</fullName>
        <inlineHelpText>The sum of all taxes on invoices for this order product.</inlineHelpText>
        <label>Billed Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BillingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>BillingAccountOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>BillingGLRuleOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>BillingGLTreatmentOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Billing Rule assigned to this order product.</inlineHelpText>
        <label>Billing Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__BillingRule__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>blng__BillingRule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Billing Treatment assigned to this order product.</inlineHelpText>
        <label>Billing Treatment</label>
        <referenceTo>blng__BillingTreatment__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>BillingTreatmentOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CanceledBillings__c</fullName>
        <inlineHelpText>Total subtracted from the order product due to cancellation, swap, etc.</inlineHelpText>
        <label>Canceled Billing Amount (without tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__FinanceBookAccounting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Finance Book object used to record the Accounting for this Order Product.</inlineHelpText>
        <label>Finance Book (Accounting)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__FinanceBook__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Order Products (Finance Book (Accounting))</relationshipLabel>
        <relationshipName>AccountingOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__GroupId__c</fullName>
        <externalId>true</externalId>
        <label>Group Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__GroupQuantity__c</fullName>
        <label>Group Quantity (System Field)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__GroupUnitPrice__c</fullName>
        <label>Group Unit Price (System Field)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__HoldBilling__c</fullName>
        <label>Hold Billing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__HoldBilling</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__IncludedUsage__c</fullName>
        <label>Included Usage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceGroupId__c</fullName>
        <label>Invoice Group ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceGrouping__c</fullName>
        <label>Invoice Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__InvoiceRunProcessingStatus__c</fullName>
        <label>Invoice Run Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceRunProcessingStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__InvoiceRunStartDate__c</fullName>
        <label>Invoice Run Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceRunStatusIndex__c</fullName>
        <externalId>true</externalId>
        <label>Invoice Run Status (Index)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Run</label>
        <referenceTo>blng__InvoiceRun__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>InvoiceRunOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__LastChargeToDate__c</fullName>
        <label>Last Charge To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__LastInvoiceTargetDate__c</fullName>
        <label>Last Invoice Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntityReference__c</fullName>
        <externalId>true</externalId>
        <label>LegalEntityReference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>